Arduino Connect met website, database voor meetwaarden

--- a/EmptySite/Index.cshtml
+++ b/EmptySite/Index.cshtml
@@ -1,3 +1,7 @@
+﻿@{
+    
+}
+
 <!DOCTYPE HTML>
 
 <html>
@@ -111,6 +115,9 @@
 							<p>Een tabel die de driftfactor laat zien</p>
 						</header>
 						 <div id="curve_chart" style="width: 900px; height: 500px; margin: auto"></div>
+                        <br><br>
+                        <a class="btn" href="http://192.168.0.100/?p8=1">Zet de Pomp aan</a><br><br>
+                        <a class="btn" href="http://192.168.0.100/?p8=0">Zet de Pomp uit</a>
 					</div>
 				</section>
 
